SET(CMAKE_SHARED_LIBRARY_PREFIX "")
ADD_SUBDIRECTORY(osgdb_3dtiles)
ADD_SUBDIRECTORY(osgdb_ept)
ADD_SUBDIRECTORY(osgdb_fbx)
ADD_SUBDIRECTORY(osgdb_gltf)
ADD_SUBDIRECTORY(osgdb_ktx)
ADD_SUBDIRECTORY(osgdb_mvt)
ADD_SUBDIRECTORY(osgdb_web)
ADD_SUBDIRECTORY(osgdb_webp)
ADD_SUBDIRECTORY(osgdb_image)
ADD_SUBDIRECTORY(osgdb_leveldb)
ADD_SUBDIRECTORY(osgdb_mediastream)
ADD_SUBDIRECTORY(osgdb_vdb)
ADD_SUBDIRECTORY(osgdb_tms)

IF(THIRDPARTY_INCLUDE_DIRS AND THIRDPARTY_LIBRARIES)
    #ADD_SUBDIRECTORY(osgdb_tiff)
ENDIF()
ADD_SUBDIRECTORY(osgdb_pbrlayout)
