SET(CMAKE_SHARED_LIBRARY_PREFIX "")
ADD_SUBDIRECTORY(osgdb_3dgs)
ADD_SUBDIRECTORY(osgdb_3dtiles)
ADD_SUBDIRECTORY(osgdb_ept)
ADD_SUBDIRECTORY(osgdb_fbx)
ADD_SUBDIRECTORY(osgdb_gltf)
ADD_SUBDIRECTORY(osgdb_geojson)
ADD_SUBDIRECTORY(osgdb_ktx)
ADD_SUBDIRECTORY(osgdb_mvt)
ADD_SUBDIRECTORY(osgdb_web)
ADD_SUBDIRECTORY(osgdb_webp)
ADD_SUBDIRECTORY(osgdb_mbtiles)
ADD_SUBDIRECTORY(osgdb_netcdf)
ADD_SUBDIRECTORY(osgdb_image)
ADD_SUBDIRECTORY(osgdb_leveldb)
ADD_SUBDIRECTORY(osgdb_odbc)
ADD_SUBDIRECTORY(osgdb_mediastream)
ADD_SUBDIRECTORY(osgdb_vdb)
ADD_SUBDIRECTORY(osgdb_terrain)
ADD_SUBDIRECTORY(osgdb_tms)
ADD_SUBDIRECTORY(osgdb_tiff)
ADD_SUBDIRECTORY(osgdb_ffmpeg)
ADD_SUBDIRECTORY(osgdb_nvcodec)
ADD_SUBDIRECTORY(osgdb_pbrlayout)
